--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -157,7 +157,7 @@
                     </div>
                     <hr class="sheet-divider" />
                     <div class="sheet-row sheet-row--action">
-                      <form action="/logout" method="POST" style="width: 100%;">
+                      <form action="/logout" method="POST" class="profile-form">
                         <button type="submit" class="sheet-action">
                           <span class="sheet-icon" aria-hidden="true">
                             <svg class="icon-logout" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
