--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
             </a>                 -->
             <!-- 웹문서에서 서버로 어떤 요청을 보내야 할때는 form태그를 사용한다. 
              method는 기본값 그냥 POST로 둔다 POST없어도 됨 -->
-             <form action="/users/<%= user._id %>?_method=DELETE" method="POST" style="display:inline">
+             <form action="/users/<%= user._id %>?_method=DELETE" method="POST" class="inline-form">
               <input type="submit" class="btn delete" title="삭제" value="X" >
             </form>
           </td>
